# crewai-examples

01_research_and_write_article/: README.md  compose.yml  pyproject.toml
01_research_and_write_article/app/: agents.py  main.py  tasks.py
02_customer_support_automation/: compose.yml
02_customer_support_automation/app/: agents.py  main.py  tasks.py
03_customer_outreach_campaign/: compose.yml
03_customer_outreach_campaign/app/: agents.py  main.py  tasks.py
04_automate_event_planning/: compose.yml  pyproject.toml
04_automate_event_planning/app/: agents.py  main.py  tasks.py
05_multi_agent_collaboration_financial_analysis/: compose.yml  pyproject.toml
05_multi_agent_collaboration_financial_analysis/app/: agents.py  main.py  tasks.py
