[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muhammad Ahmad <ahmadshaukat_4@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <=3.13"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
crewai = "0.28.8"
crewai-tools = "0.1.6"
langchain-community = "0.0.29"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
